--- a/SS21/Project/requirements.txt
+++ b/SS21/Project/requirements.txt
@@ -1,6 +1,8 @@
+datasets==1.11.0
 matplotlib==3.4.3
 numpy==1.19.5
 pandas==1.3.2
-pip==21.2.4
+scikit-learn==0.24.2
 setuptools==57.4.0
+torch==1.9.0
 transformers==4.9.2
